end_of_workshop

--- a/Day1/1.3.Intro_jupyter.ipynb
+++ b/Day1/1.3.Intro_jupyter.ipynb
@@ -171,23 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"http://python.org/images/python-logo.gif\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import Image\n",
     "Image(url='http://python.org/images/python-logo.gif')"
@@ -242,7 +228,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./example_script.py $var1 $var2"
+    "%run ./example_script.py $var1 $var2\n",
+    "\n",
+    "# allows you to run a script through your terminal and not your notebook"
    ]
   },
   {
@@ -277,7 +265,9 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%run ./example_script.py $var1 $var2"
+    "%run ./example_script.py $var1 $var2\n",
+    "\n",
+    "#supresses output, ?what are \"magic\" commands?"
    ]
   },
   {
