--- a/Day1/1.6.imrecog.ipynb
+++ b/Day1/1.6.imrecog.ipynb
@@ -162,6 +162,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "target=np.arange(len(frames)) # create a numpy array with the number of values = the length of the list frames[]"
    ]
@@ -326,7 +333,8 @@
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "tree = DecisionTreeClassifier().fit(np.squeeze(Xtrain), ytrain)"
+    "tree = DecisionTreeClassifier().fit(np.squeeze(Xtrain), ytrain)\n",
+    "# squeeze?"
    ]
   },
   {
@@ -521,7 +529,9 @@
     "\n",
     "# apply model to test data\n",
     "tree = DecisionTreeClassifier().fit(images_pca, ytrain)\n",
-    "tree.score(pca.transform(Xtest), ytest)"
+    "tree.score(pca.transform(Xtest), ytest)\n",
+    "\n",
+    "#? if our data was different, how is our "
    ]
   },
   {
@@ -841,7 +851,9 @@
     "print(np.shape(X))\n",
     "# we are stacking the associated 'y' (label) vectors. Because these are both 1D, we use the 'hstack' command\n",
     "y = np.hstack((ytrain, ytest))\n",
-    "print(np.shape(y))"
+    "print(np.shape(y))\n",
+    "\n",
+    "#pipeline, will call only when needed instead of storing in memory"
    ]
   },
   {
@@ -868,7 +880,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cross_val_score(model, X, y, cv=5)"
+    "cross_val_score(model, X, y, cv=5)\n",
+    "# looking for these to be relatively the same, if so then t is generalizing pretty well, if not might want to add more data"
    ]
   },
   {
@@ -902,7 +915,18 @@
    "source": [
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "model = ExtraTreesClassifier()\n",
-    "model.fit(pca.transform(Xtrain), ytrain)"
+    "model.fit(pca.transform(Xtrain), ytrain)\n",
+    "\n",
+    "# explaining the amount of variance doesnt necessarily translate to the most useful"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?model.feature_importances_"
    ]
   },
   {
