--- a/Day1/1.7.semseg.ipynb
+++ b/Day1/1.7.semseg.ipynb
@@ -303,7 +303,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M, N, _ = np.shape(training_rgb)"
+    "M, N, _ = np.shape(training_rgb)\n",
+    "# recast so that it has a zero mean and 1 variance"
    ]
   },
   {
@@ -445,7 +446,7 @@
     "test_rgb = test_rgb[:nrows_mask,:,:]\n",
     "test_rgb = preprocessing.scale(test_rgb[:,:,0]) # we are using the slicing [:,:,0] to indicate we are testing the first image. \n",
     "# if we wanted to test the 10th image, that would be test_rgb[:,:,9] (python indexes from zero)\n",
-    "M_tst, N_tst = test_rgb.shape"
+    "M_tst, N_tst = test_rgb.shape\n"
    ]
   },
   {
@@ -786,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.mixture import GaussianMixture"
+    "from sklearn.mixture import GaussianMixture\n"
    ]
   },
   {
@@ -912,7 +913,7 @@
     "plt.colorbar(shrink=0.1)\n",
     "plt.subplot(1,3,3)\n",
     "plt.imshow(test_rgb, alpha=0.6)\n",
-    "plt.imshow(cluster==3, cmap=plt.cm.binary_r, alpha=0.4)\n",
+    "plt.imshow(cluster==1, cmap=plt.cm.binary_r, alpha=0.4)\n",
     "plt.axis('off')"
    ]
   },
