--- a/Day1/1.8.Intro_tensorflow.ipynb
+++ b/Day1/1.8.Intro_tensorflow.ipynb
@@ -438,6 +438,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tf.image??\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with tf.Session() as session:\n",
     "    result = session.run(tf.image.flip_up_down(image))\n",
     "\n",
